--- a/NUFSCar/app/src/main/AndroidManifest.xml
+++ b/NUFSCar/app/src/main/AndroidManifest.xml
@@ -18,9 +18,12 @@
         <activity android:name=".view.SplashActivity" />
         <activity android:name=".view.LoginActivity" />
         <activity android:name=".view.NewsFeedActivity" />
-        <activity android:name=".view.EventsActivity" />
+        <activity
+            android:name=".view.EventsActivity"
+            android:label="@string/title_activity_events"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".view.FavoritiesActivity" />
-        <activity android:name=".view.NewsContentActivity"></activity>
+        <activity android:name=".view.NewsContentActivity" />
     </application>
 
 </manifest>
